# octantis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSING.md  README.md  artifacthub-repo.yml  cliff.toml  pyproject.toml
.github/: AGENT.md  CONTRIBUTING.md  ONBOARDING.md  OVERVIEW.md  PIPELINE.md  SECURITY.md  agent.md  onboarding.md  overview.md  pipeline.md  pull_request_template.md
.github/workflows/: ci.yml  helm-publish.yml  mcp-grafana.yml  release-sdk.yml  release.yml
charts/octantis/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/octantis/charts/: opentelemetry-collector-0.112.0.tgz  opentelemetry-operator-0.109.2.tgz  opentelemetry-operator-0.74.3.tgz  redpanda-5.9.31.tgz
charts/octantis/examples/: values-external-mcp.yaml  values-full-stack.yaml  values-minimal.yaml
charts/octantis/templates/: NOTES.txt  _helpers.tpl
charts/octantis/templates/distributed/: configmap.yaml  ingester-deployment.yaml  ingester-service.yaml  worker-deployment.yaml
charts/octantis/templates/grafana-mcp/: deployment.yaml  service.yaml
charts/octantis/templates/k8s-mcp/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
charts/octantis/templates/octantis/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/octantis/templates/otel/: opentelemetrycollector-cr.yaml
charts/octantis/templates/secrets/: externalsecret.yaml
dev/: README.md  dns-cleanup.sh  dns-setup.sh  op-setup.sh  setup.sh  teardown.sh
dev/helm/kube-prometheus-stack/: values.yaml
dev/helm/mimir/: values.yaml
dev/helm/nginx-gateway-fabric/: values.yaml
dev/helm/opentelemetry-collector/: values.yaml
dev/kind/: kind-config.yaml
dev/manifests/: gateway.yaml  grafana-route.yaml  mcp-grafana.yaml  mcp-k8s.yaml  metallb-config.yaml  mimir-route.yaml  ngf-servicemonitor.yaml  nginx-demo.yaml  octantis.yaml
docs/: agent.md  onboarding.md  overview.md  pipeline.md  plugins.md
docs/prds/: INDEX.md  prd-001-otlp-direct-ingestion.md  prd-002-grafana-mcp-analysis.md  prd-003-multi-platform-docker-aws.md  prd-004-helm-chart.md  prd-005-plugin-architecture.md
docs/tech-specs/: INDEX.md  tech-spec-001-otlp-direct-ingestion.md  tech-spec-002-grafana-mcp-analysis.md  tech-spec-003-multi-platform-docker-aws.md  tech-spec-004-helm-chart.md  tech-spec-005-plugin-architecture.md
examples/: README.md  collector-config.yaml
examples/aws/: README.md  docker-compose.yml  ecs-task-definition.json  iam-policy.json  otel-collector-config.yaml  prometheus.yml
examples/docker/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
examples/docker-compose/: docker-compose.yml  otel-collector-config.yaml
examples/kubernetes/: mcp-grafana.yaml  mcp-k8s.yaml  octantis.yaml
examples/otel-operator/: namespace.yaml  opentelemetrycollector.yaml
openspec/changes/archive/2026-04-06-grafana-mcp-analysis/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-06-otlp-direct-ingestion/: design.md  (+2 more)
openspec/changes/helm-chart-modular/: design.md  proposal.md  tasks.md
openspec/changes/implement-plugin-architecture/: design.md  proposal.md  tasks.md
openspec/changes/multi-platform-docker-aws/: design.md  proposal.md  tasks.md
openspec/specs/fingerprint-cooldown/: spec.md
openspec/specs/investigation-metrics/: spec.md
openspec/specs/mcp-client/: spec.md
openspec/specs/otlp-http-receiver/: spec.md
openspec/specs/otlp-parser/: spec.md
openspec/specs/trigger-filter/: spec.md
src/octantis/: __init__.py  config.py  main.py  metrics.py
src/octantis/collectors/: __init__.py  kubernetes.py  prometheus.py
src/octantis/consumers/: __init__.py  redpanda.py
src/octantis/distributed/: __init__.py  consumer.py  producer.py
src/octantis/graph/: __init__.py  state.py  workflow.py
src/octantis/licensing/: gating.py  public_key.pem  validator.py
src/octantis/mcp_client/: __init__.py  aggregator.py  manager.py
src/octantis/models/: __init__.py  action_plan.py  analysis.py  event.py
src/octantis/notifiers/: __init__.py  discord.py  slack.py
src/octantis/pipeline/: __init__.py  batcher.py  cooldown.py  environment_detector.py  prefilter.py  sampler.py  trigger_filter.py
src/octantis/plugins/: __init__.py  registry.py
src/octantis/receivers/: __init__.py  grpc_server.py  http_server.py  parser.py  receiver.py
tests/: test_action_plan.py  test_analyzer.py  test_analyzer_node.py  test_collector.py  test_cooldown.py  test_cooldown_plugin.py  test_discord_notifier.py  test_distributed.py  test_distributed_integration.py  test_environment_detector.py  test_grpc_server.py  test_http_server.py  test_ingester_plugins.py  test_investigator.py  test_investigator_helpers.py  test_licensing.py  test_main_config.py  test_mcp_client.py  test_mcp_plugins.py  test_metrics.py  test_models.py  test_notifier.py  test_notifier_node.py  test_notifier_plugins.py  test_otlp_integration.py  test_otlp_receiver.py  test_parser.py  test_pipeline.py  test_planner.py  test_plugin_registry.py  test_receiver_plugin.py  test_slack_notifier.py  test_standalone_runtime.py  test_trigger_filter.py  test_trigger_filter_plugin.py  test_utils.py  test_workflow.py
tests/fixtures/: otlp_logs.json  otlp_logs.pb  otlp_metrics.json  otlp_metrics.pb  otlp_payloads.py
tmp/: kubeconfig.yaml
(+45 files in other folders)
