[project]
name = "octantis"
version = "0.1.0"
description = "Intelligent infrastructure monitoring agent for EKS/K8s"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "litellm>=1.50.0",
    "grpcio>=1.62.0",
    "opentelemetry-proto>=1.24.0",
    "aiohttp>=3.9.0",
    "kubernetes>=31.0.0",
    "prometheus-api-client>=0.5.5",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
octantis = "octantis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/octantis"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.isort]
known-first-party = ["octantis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
